[package]

authors = ["Christian Sdunek <me@systemcluster.me>"]
categories = [
  "development-tools::build-utils",
  "os::windows-apis",
  "command-line-utilities",
  "no-std",
]
keywords = ["parser", "resource", "windows", "pe", "coff"]
description = "Resource Editor for parsing and modification of Windows Portable Executables and their resources"
edition = "2021"
include = [
  "Cargo.toml",
  "src/**/*",
  "LICENSE",
]
license = "BSD-2-Clause"
name = "editpe"
readme = "README.md"
repository = "https://github.com/Systemcluster/editpe"
version = "0.1.0"

[lib]

name = "editpe"
path = "src/lib.rs"
doctest = false

[features]

default = ["std", "image"]
std = ["dep:thiserror"]
image = ["std", "dep:image"]

[dependencies]

indexmap = { version = "2.4", default-features = false }
log = { version = "0.4" }
zerocopy = { version = "0.7", features = ["derive"] }
debug-ignore = { version = "1.0" }
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng"] }

[dependencies.thiserror]

optional = true
version = "1.0"

[dependencies.image]

optional = true
default-features = false
features = ["ico", "jpeg", "png", "tga", "tiff", "webp", "bmp"]
version = "0.25"

[dev-dependencies]

editpe = { path = ".", features = ["std", "image"] }

env_logger = { version = "0.11" }

[package.metadata.docs.rs]

rustdoc-args = ["--cfg", "docsrs"]
all-features = true
