[package]

authors = ["Christian Sdunek <me@systemcluster.me>"]
categories = [
  "development-tools::build-utils",
  "os::windows-apis",
  "command-line-utilities",
  "no-std",
]
keywords = ["parser", "resource", "windows", "pe", "coff"]
description = "Resource Editor for parsing and modification of Windows Portable Executables and their resources"
edition = "2021"
include = [
  "Cargo.toml",
  "src/**/*",
  "LICENSE",
]
license = "BSD-2-Clause"
name = "editpe"
readme = "README.md"
repository = "https://github.com/Systemcluster/editpe"
version = "0.1.0"

[lib]

name = "editpe"
path = "src/lib.rs"
doctest = false

[features]

default = ["std", "images"]

# Enables standard library features, including reading and writing files.
std = ["dep:thiserror"]
# Enables processing images with the `image` crate. Also enables `std`.
images = ["std", "dep:image"]

[dependencies]

indexmap = { version = "2.6", default-features = false }
log = { version = "0.4" }
zerocopy = { version = "0.8", features = ["derive"] }
debug-ignore = { version = "1.0" }
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng"] }

image = { version = "0.25.2", default-features = false, optional = true, features = ["ico"] }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]

editpe = { path = ".", features = ["std", "images"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }

env_logger = { version = "0.11" }

[package.metadata.docs.rs]

rustdoc-args = ["--cfg", "docsrs"]
all-features = true
